# stringstyler

./: README.md  pyproject.toml
src/colortext/: __init__.py  colortext.py
src/stringstyler/: __init__.py
tests/: test_colortext.py  test_stringstyler.py
