[project]
name = "colortext"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "numgrade", email = "num@numgrade.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "bandit>=1.7.9",
    "tox>=4.15.1",
    "tox-pdm>=0.7.2",
]
lint = [
    "ruff>=0.4.10",
    "mypy>=1.10.1",
]

[tool.pdm.scripts]
check-formatting = "ruff check --fix src/ tests/"
format = "ruff format src/ tests/"
type-check = "mypy src/ tests/"
security-scan = "bandit -rc pyproject.toml src/ tests/"